MAINT: Use bundle_tools_3

--- a/environment.yml
+++ b/environment.yml
@@ -1,13 +1,12 @@
 name: constructor-env
 
 channels:
-  - napari/label/bundle_tools
+  - napari/label/bundle_tools_3
   - conda-forge
 
 dependencies:
-  - constructor =3.3a=*_21
-  - conda-standalone =4.12a=*_9
-  - menuinst =2.0a=14_g594d642_*
-  - conda =4.12a
-  - mamba =1.1.0
-  - pydantic <2.0a0
+  - constructor
+  - conda-standalone
+  - menuinst
+  - conda
+  - mamba
