--- a/recipes/mne-python_1.4/construct.yaml
+++ b/recipes/mne-python_1.4/construct.yaml
@@ -17,11 +17,12 @@ conclusion_file: ../../assets/conclusion.rtf  # [not win]
 initialize_by_default: False
 register_python_default: False
 
-# default_prefix will be ignored by macOS .pkg installer!
 default_prefix: ${HOME}/mne-python/1.4.2_0                          # [linux]
 default_prefix: "%USERPROFILE%\\mne-python\\1.4.2_0"                # [win]
 default_prefix_domain_user: "%LOCALAPPDATA%\\mne-python\\1.4.2_0"   # [win]
 default_prefix_all_users: "%ALLUSERSPROFILE%\\mne-python\\1.4.2_0"  # [win]
+default_location_pkg: "/Applications"  # [osx]
+pkg_name: "MNE-Python"  # [osx]
 
 uninstall_name: MNE-Python ${VERSION} (Python ${PYVERSION})
 
