--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -389,21 +389,21 @@ jobs:
             pushd ~/.local/share/applications
             ls -l || exit 1
             echo "Checking for existence of .desktop files:"
-            ls MNE-Python*.desktop || exit 1
-            test `ls MNE-Python*.desktop | wc -l` -eq 5 || exit 1
+            ls mne-python*.desktop || exit 1
+            test `ls mne-python*.desktop | wc -l` -eq 5 || exit 1
             echo ""
 
             # … and patched to work around a bug in menuinst
             echo "Checking that incorrect Terminal entries have been removed"
-            test `grep "Terminal=True"  MNE-Python*.desktop | wc -l` -eq 0 || exit 1
-            test `grep "Terminal=False" MNE-Python*.desktop | wc -l` -eq 0 || exit 1
+            test `grep "Terminal=True"  mne-python*.desktop | wc -l` -eq 0 || exit 1
+            test `grep "Terminal=False" mne-python*.desktop | wc -l` -eq 0 || exit 1
             echo ""
 
             echo "Checking that Terminal entries are correct…"
-            test `grep "Terminal=true"  MNE-Python*.desktop | wc -l` -ge 1 || exit 1
-            test `grep "Terminal=false" MNE-Python*.desktop | wc -l` -ge 1 || exit 1
+            test `grep "Terminal=true"  mne-python*.desktop | wc -l` -ge 1 || exit 1
+            test `grep "Terminal=false" mne-python*.desktop | wc -l` -ge 1 || exit 1
             # Display their contents
-            for f in MNE-Python*.desktop; do echo "📂 $f:"; cat "$f"; echo; done
+            for f in mne-python*.desktop; do echo "📂 $f:"; cat "$f"; echo; done
             popd
           fi
 
