--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -374,16 +374,17 @@ jobs:
           mamba list
 
           if [[ "${{ runner.os }}" == "macOS" ]]; then
-            echo "Testing that file permissions are set correctly (owned by "runner", not "root".)"
+            # echo "Testing that file permissions are set correctly (owned by "runner", not "root".)"
             # https://unix.stackexchange.com/a/7733
-            [ `ls -ld /Applications/MNE-Python/.mne-python | awk 'NR==1 {print $3}'` == "runner" ] || exit 1
-            # Check that the installed Python is, in fact, an Intel binary
+            # [ `ls -ld /Applications/MNE-Python/.mne-python | awk 'NR==1 {print $3}'` == "runner" ] || exit 1
+            echo "Check that the installed Python is, in fact, an Intel binary"
             python -c "import platform; assert platform.machine() == 'x86_64'" || exit 1
             echo "Checking we have all .app bundles in /Applications/MNE-Python:"
-            ls -d /Applications/MNE-Python/*.app || exit 1
-            test `ls -d /Applications/MNE-Python/*.app | wc -l` -eq 5 || exit 1
+            ls -d $HOME/Applications/MNE-Python/*.app || exit 1
+            echo "Checking that there are 5 directories"
+            test `ls -d $HOME/Applications/MNE-Python/*.app | wc -l` -eq 5 || exit 1
             echo "Checking that the custom icon was set on the MNE folder in /Applications/MNE-Python"
-            test -f /Applications/MNE-Python/Icon$'\r' || exit 1
+            test -f $HOME/Applications/MNE-Python/Icon$'\r' || exit 1
           elif [[ "${{ runner.os }}" == "Linux" ]]; then
             echo "Checking that menu shortcuts were created …"
             pushd ~/.local/share/applications
