--- a/recipes/mne-python_1.5/construct.yaml
+++ b/recipes/mne-python_1.5/construct.yaml
@@ -13,7 +13,7 @@ header_image: ../../assets/header.png
 icon_image: ../../assets/icon.png
 welcome_file: ../../assets/welcome.rtf
 readme_text: ""
-conclusion_file: ../../assets/conclusion.rtf  # [not win]
+conclusion_file: ../../assets/conclusion.rtf
 
 initialize_by_default: False
 register_python_default: False
@@ -22,10 +22,6 @@ default_prefix: ${HOME}/mne-python/1.5.0_0                          # [linux]
 default_prefix: "%USERPROFILE%\\mne-python\\1.5.0_0"                # [win]
 default_prefix_domain_user: "%LOCALAPPDATA%\\mne-python\\1.5.0_0"   # [win]
 default_prefix_all_users: "%ALLUSERSPROFILE%\\mne-python\\1.5.0_0"  # [win]
-# shortcuts will be created in Appplications automatically, so use Library here
-default_location_pkg: "Library"                                     # [osx]
-pkg_name: "MNE-Python"                                              # [osx]
-progress_notifications: true                                        # [osx]
 
 uninstall_name: MNE-Python ${VERSION} (Python ${PYVERSION})
 
