--- a/recipes/mne-python_1.5/construct.yaml
+++ b/recipes/mne-python_1.5/construct.yaml
@@ -77,7 +77,7 @@ specs:
   - mne-kit-gui =1.1.0
   - mne-icalabel =0.4  # [not win]
   - mne-gui-addons =0.1.0
-  - traitsui =7.4.3  # mayavi not 8.0 compatible
+  - traitsui =8.0.0
   - autoreject =0.4.2
   - pyriemann =0.5
   - pyprep =0.4.2
@@ -85,8 +85,8 @@ specs:
   # Python
   - python =3.11.4
   - pip =23.2.1
-  - conda =23.3.1
-  - mamba =1.4.2
+  - conda =23.5.2
+  - mamba =1.4.9
   - openblas =0.3.23
   - jupyter =1.0.0
   - jupyterlab =4.0.3
@@ -120,8 +120,9 @@ specs:
   # OpenNeuro.org data access
   - openneuro-py =2023.1.0
   # sleep staging
-  - sleepecg =0.5.5  # TODO: for 3.11 wait for numba, then restart and wait for https://github.com/conda-forge/sleepecg-feedstock/pull/20
-  - yasa =0.6.3  # TODO: for 3.11 wait for sleepecg
+  - sleepecg =0.5.5
+  - tensorflow ==2.12.1=cpu_py311*
+  - yasa =0.6.3
   # various biological signals (ECG, EOG, EMG, …)
   - neurokit2 =0.2.5
   # GitHub client, https://cli.github.com
