--- a/recipes/mne-python_1.4/construct.yaml
+++ b/recipes/mne-python_1.4/construct.yaml
@@ -14,8 +14,8 @@ welcome_file: ../../assets/welcome.rtf
 readme_text: ""
 conclusion_file: ../../assets/conclusion.rtf
 
-initialize_by_default: False
-register_python_default: False
+initialize_by_default: false
+register_python_default: false
 
 # default_prefix will be ignored by macOS .pkg installer!
 default_prefix: ${HOME}/mne-python/1.4.2_0                          # [linux]
@@ -145,5 +145,5 @@ condarc:
     # - pytorch  # [win]
     - conda-forge
   channel_priority: strict
-  allow_other_channels: False
+  allow_other_channels: false
   env_prompt: "(mne-1.4.2_0) "
