--- a/recipes/mne-python_1.5/construct.yaml
+++ b/recipes/mne-python_1.5/construct.yaml
@@ -15,8 +15,8 @@ welcome_file: ../../assets/welcome.rtf
 readme_text: ""
 conclusion_file: ../../assets/conclusion.rtf
 
-initialize_by_default: False
-register_python_default: False
+initialize_by_default: false
+register_python_default: false
 
 default_prefix: ${HOME}/mne-python/1.5.0_0                          # [linux]
 default_prefix: "%USERPROFILE%\\mne-python\\1.5.0_0"                # [win]
@@ -85,7 +85,7 @@ specs:
   # Python
   - python =3.11.4
   - pip =23.2.1
-  - conda =23.7.2
+  - conda =23.5.2
   - mamba =1.4.9
   - openblas =0.3.23
   - jupyter =1.0.0
@@ -145,5 +145,5 @@ condarc:
     # - pytorch  # [win]
     - conda-forge
   channel_priority: strict
-  allow_other_channels: False
+  allow_other_channels: false
   env_prompt: "(mne-1.5.0_0) "
