--- a/recipes/mne-python_1.5/construct.yaml
+++ b/recipes/mne-python_1.5/construct.yaml
@@ -15,8 +15,8 @@ welcome_file: ../../assets/welcome.rtf
 readme_text: ""
 conclusion_file: ../../assets/conclusion.rtf
 
-initialize_by_default: False
-register_python_default: False
+initialize_by_default: false
+register_python_default: false
 
 default_prefix: ${HOME}/mne-python/1.5.0_0                          # [linux]
 default_prefix: "%USERPROFILE%\\mne-python\\1.5.0_0"                # [win]
@@ -62,11 +62,11 @@ specs:
   # - mne-bids =0.11dev0=*_20221007
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS STOP: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
 
-  - mne =1.4.2=*_0
-  - mne-installer-menus =1.4.2=*_0
+  - mne =1.5.0=*_0
+  - mne-installer-menus =1.5.0=*_0
   - mne-bids =0.12.0
   - mne-bids-pipeline =1.4.0
-  - mne-qt-browser =0.5.1
+  - mne-qt-browser =0.5.2
   - mne-connectivity =0.5.0
   - mne-faster =1.1.0
   - mne-nirs =0.5.0
@@ -89,8 +89,8 @@ specs:
   - mamba =1.4.9
   - openblas =0.3.23
   - jupyter =1.0.0
-  - jupyterlab =4.0.3
-  - ipykernel =6.24.0
+  - jupyterlab =4.0.5
+  - ipykernel =6.25.1
   - nb_conda_kernels =2.3.1
   - spyder-kernels =2.4.4
   - spyder =5.4.4
@@ -128,22 +128,22 @@ specs:
   # GitHub client, https://cli.github.com
   - gh =2.32.1
   # NeuroSpin needs the following
-  - questionary =1.10.0
+  - questionary =2.0.0
   - pqdm =0.2.0
   # Viz
   - matplotlib =3.7.2
   - ipympl =0.9.3
   - seaborn =0.12.2
-  - plotly =5.15.0
+  - plotly =5.16.0
   - vtk =9.2.6
   - git =2.41.0  # [win]
   - make =4.3  # [win]
-  - ipywidgets =8.0.7
+  - ipywidgets =8.1.0
 
 condarc:
   channels:
     # - pytorch  # [win]
     - conda-forge
   channel_priority: strict
-  allow_other_channels: False
+  allow_other_channels: false
   env_prompt: "(mne-1.5.0_0) "
