--- a/recipes/mne-python_1.5/construct.yaml
+++ b/recipes/mne-python_1.5/construct.yaml
@@ -1,4 +1,4 @@
-version: 1.5.0_0
+version: 1.5.0_1
 name: MNE-Python
 company: MNE-Python Developers
 # When the version above changes to a new major/minor, it needs to be updated
@@ -18,17 +18,17 @@ conclusion_file: ../../assets/conclusion.rtf
 initialize_by_default: false
 register_python_default: false
 
-default_prefix: ${HOME}/mne-python/1.5.0_0                          # [linux]
-default_prefix: "%USERPROFILE%\\mne-python\\1.5.0_0"                # [win]
-default_prefix_domain_user: "%LOCALAPPDATA%\\mne-python\\1.5.0_0"   # [win]
-default_prefix_all_users: "%ALLUSERSPROFILE%\\mne-python\\1.5.0_0"  # [win]
+default_prefix: ${HOME}/mne-python/1.5.0_1                          # [linux]
+default_prefix: "%USERPROFILE%\\mne-python\\1.5.0_1"                # [win]
+default_prefix_domain_user: "%LOCALAPPDATA%\\mne-python\\1.5.0_1"   # [win]
+default_prefix_all_users: "%ALLUSERSPROFILE%\\mne-python\\1.5.0_1"  # [win]
 
 uninstall_name: MNE-Python ${VERSION} (Python ${PYVERSION})
 
-installer_filename: MNE-Python-1.5.0_0-macOS_Intel.pkg  # [osx and not arm64]
-installer_filename: MNE-Python-1.5.0_0-macOS_M1.pkg     # [osx and arm64]
-installer_filename: MNE-Python-1.5.0_0-Windows.exe      # [win]
-installer_filename: MNE-Python-1.5.0_0-Linux.sh         # [linux]
+installer_filename: MNE-Python-1.5.0_1-macOS_Intel.pkg  # [osx and not arm64]
+installer_filename: MNE-Python-1.5.0_1-macOS_M1.pkg     # [osx and arm64]
+installer_filename: MNE-Python-1.5.0_1-Windows.exe      # [win]
+installer_filename: MNE-Python-1.5.0_1-Linux.sh         # [linux]
 
 post_install: ../../assets/post_install_macOS.sh        # [osx]
 post_install: ../../assets/post_install_linux.sh        # [linux]
@@ -82,12 +82,14 @@ specs:
   - pyriemann =0.5
   - pyprep =0.4.2
   - openmeeg =2.5.6
+  # BLAS
+  # - openblas =0.3.23
+  - libblas =3.9.0=*openblas
   # Python
   - python =3.11.4
   - pip =23.2.1
   - conda =23.5.2
   - mamba =1.4.9
-  - openblas =0.3.23
   - jupyter =1.0.0
   - jupyterlab =4.0.5
   - ipykernel =6.25.1
@@ -146,4 +148,4 @@ condarc:
     - conda-forge
   channel_priority: strict
   allow_other_channels: false
-  env_prompt: "(mne-1.5.0_0) "
+  env_prompt: "(mne-1.5.0_1) "
