FIX: Back to library

--- a/recipes/mne-python_1.5/construct.yaml
+++ b/recipes/mne-python_1.5/construct.yaml
@@ -23,7 +23,7 @@ default_prefix: "%USERPROFILE%\\mne-python\\1.5.0_1"                # [win]
 default_prefix_domain_user: "%LOCALAPPDATA%\\mne-python\\1.5.0_1"   # [win]
 default_prefix_all_users: "%ALLUSERSPROFILE%\\mne-python\\1.5.0_1"  # [win]
 # shortcuts will be created in Appplications automatically, so use Library here
-# default_location_pkg: "Library"                                     # [osx]
+default_location_pkg: "Library"                                     # [osx]
 pkg_name: "MNE-Python"                                              # [osx]
 progress_notifications: true                                        # [osx]
 
