--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -164,9 +164,9 @@ jobs:
           # Now extract the package and check that the _conde.exe binary is
           # properly signed as well
           pkgutil --expand-full ${MNE_INSTALLER_NAME} ./mne-extracted
-          codesign -vd ./mne-extracted/main.pkg/Payload/Library/mne-python/_conda.exe
+          codesign -vd ./mne-extracted/main.pkg/Payload/Library/mne-python*/_conda.exe
           # Check entitlements of _conda.exe binary
-          codesign --display --entitlements - ./mne-extracted/main.pkg/Payload/Library/mne-python/_conda.exe
+          codesign --display --entitlements - ./mne-extracted/main.pkg/Payload/Library/mne-python*/_conda.exe
           rm -rf ./mne-extracted
 
       - name: Notarize installer (macOS)
