--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -380,7 +380,7 @@ jobs:
             python -c "import platform; assert platform.machine() == 'x86_64'" || exit 1
             echo "Checking we have all .app bundles in /Applications:"
             ls -al /Applications/
-            ls -d /Applications/*MNE*.app || exit 1
+            ls -d /Applications/MNE-Python*/*.app || exit 1
             echo "Checking that there are 5 directories"
             test `ls -d /Applications/MNE-Python*/*.app | wc -l` -eq 5 || exit 1
             echo "Checking that the custom icon was set on the MNE folder in /Applications/MNE-Python"
