--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -105,10 +105,12 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install Micromamba
-        uses: mamba-org/provision-with-micromamba@main
+        uses: mamba-org/setup-micromamba
         with:
-          environment-file: environment.yml
-          micromamba-version: latest
+          condarc: |
+            channels:
+              - conda-forge
+            channel_priority: strict
 
       - name: Extract version information
         env:
