--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -105,7 +105,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install Micromamba
-        uses: mamba-org/setup-micromamba
+        uses: mamba-org/setup-micromamba@v1
         with:
           condarc: |
             channels:
