--- a/recipes/mne-python_1.5/construct.yaml
+++ b/recipes/mne-python_1.5/construct.yaml
@@ -96,6 +96,7 @@ specs:
   - pip =23.2.1
   - conda =23.7.3
   - mamba =1.5.0
+  - conda-libmamba-solver =23.7.0
   - jupyter =1.0.0
   - jupyterlab =4.0.5
   - ipykernel =6.25.1
@@ -113,7 +114,7 @@ specs:
   - pingouin =0.5.3
   - pycircstat =0.0.2
   # MRI
-  - fsleyes =1.8.2
+  - fsleyes =1.8.3
   - dcm2niix =1.0.20230411
   # Time-frequency analysis
   - pactools =0.3.1
