--- a/recipes/mne-python_1.5/construct.yaml
+++ b/recipes/mne-python_1.5/construct.yaml
@@ -71,10 +71,10 @@ specs:
   # - mne-installer-menus =1.4dev0=*_20230503
   # - mne-bids =0.11dev0=*_20221007
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS STOP: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
-  - mne-base =1.5.0=*_0
+  - mne =1.5.0=*_0
   - mne-installer-menus =1.5.0=*_0
   # For testing purposes with build_local.sh, you can comment out all deps
-  # below for speed
+  # below for speed, and change mne to mne-base above
   - mne-bids =0.13.0
   - mne-bids-pipeline =1.4.0
   - mne-qt-browser =0.5.2
