--- a/recipes/mne-python_1.5/construct.yaml
+++ b/recipes/mne-python_1.5/construct.yaml
@@ -82,7 +82,7 @@ specs:
   - mne-faster =1.1.0
   - mne-nirs =0.5.0
   - mne-realtime =0.2.0
-  - mne-features =0.2.1
+  - mne-features =0.3
   - mne-rsa =0.8
   - mne-ari =0.1.2
   - mne-kit-gui =1.1.0
@@ -147,6 +147,7 @@ specs:
   - git =2.42.0  # [win]
   - make =4.3  # [win]
   - ipywidgets =8.1.0
+  - pyvista =0.41.1
   - trame =3.2.4
   - trame-vtk =2.5.8
   - trame-vuetify =2.3.1
