--- a/recipes/mne-python_1.5/construct.yaml
+++ b/recipes/mne-python_1.5/construct.yaml
@@ -13,7 +13,7 @@ header_image: ../../assets/header.png
 icon_image: ../../assets/icon.png
 welcome_file: ../../assets/welcome.rtf
 readme_text: ""
-conclusion_file: ../../assets/conclusion.rtf
+conclusion_file: ../../assets/conclusion.rtf   # [not win]
 
 initialize_by_default: false
 register_python_default: false
@@ -22,6 +22,11 @@ default_prefix: ${HOME}/mne-python/1.5.0_1                          # [linux]
 default_prefix: "%USERPROFILE%\\mne-python\\1.5.0_1"                # [win]
 default_prefix_domain_user: "%LOCALAPPDATA%\\mne-python\\1.5.0_1"   # [win]
 default_prefix_all_users: "%ALLUSERSPROFILE%\\mne-python\\1.5.0_1"  # [win]
+default_location_pkg: "Applications/MNE-Python/1.5.0_1"             # [osx]
+pkg_name: ".mne-python"                                             # [osx]
+progress_notifications: true                                        # [osx]
+install_path_exists_error_text: |
+    {CHOSEN_PATH} already exists. Relaunch the installer and choose another location in the Destination Select step, or remove the existing directory and try again.
 
 uninstall_name: MNE-Python ${VERSION} (Python ${PYVERSION})
 
@@ -54,16 +59,22 @@ channels:
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS STOP: COMMENT OUT BEFORE RELEASE! ⛔️ ⛔️ ⛔️
 
 specs:
+  # Python
+  - python =3.11.5
+  - pip =23.2.1
+  - conda =23.7.3
+  - mamba =1.5.1
+  - conda-libmamba-solver =23.7.0
   # MNE ecosystem
-
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS START: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
   # - mne =1.4dev0=*_20230503
   # - mne-installer-menus =1.4dev0=*_20230503
   # - mne-bids =0.11dev0=*_20221007
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS STOP: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
-
   - mne =1.5.0=*_0
   - mne-installer-menus =1.5.0=*_0
+  # For testing purposes with build_local.sh, you can comment out all deps
+  # below for speed, and change mne to mne-base above
   - mne-bids =0.13.0
   - mne-bids-pipeline =1.4.0
   - mne-qt-browser =0.5.2
@@ -71,7 +82,7 @@ specs:
   - mne-faster =1.1.0
   - mne-nirs =0.5.0
   - mne-realtime =0.2.0
-  - mne-features =0.2.1
+  - mne-features =0.3
   - mne-rsa =0.8
   - mne-ari =0.1.2
   - mne-kit-gui =1.1.0
@@ -83,19 +94,14 @@ specs:
   - pyprep =0.4.2
   - openmeeg =2.5.6
   # BLAS
-  - openblas =0.3.23
+  - openblas =0.3.24
   - libblas =3.9.0=*openblas
-  # Python
-  - python =3.11.4
-  - pip =23.2.1
-  - conda =23.5.2
-  - mamba =1.4.9
   - jupyter =1.0.0
   - jupyterlab =4.0.5
-  - ipykernel =6.25.1
+  - ipykernel =6.25.2
   - nb_conda_kernels =2.3.1
   - spyder-kernels =2.4.4
-  - spyder =5.4.4
+  - spyder =5.4.5
   - darkdetect =0.8.0
   - qdarkstyle =3.1
   - numba =0.57.1
@@ -107,7 +113,7 @@ specs:
   - pingouin =0.5.3
   - pycircstat =0.0.2
   # MRI
-  - fsleyes =1.8.2
+  - fsleyes =1.8.3
   - dcm2niix =1.0.20230411
   # Time-frequency analysis
   - pactools =0.3.1
@@ -141,6 +147,19 @@ specs:
   - git =2.42.0  # [win]
   - make =4.3  # [win]
   - ipywidgets =8.1.0
+  - pyvista =0.41.1
+  - trame =3.2.4
+  - trame-vtk =2.5.8
+  - trame-vuetify =2.3.1
+  # Development
+  - setuptools_scm =7.1.0
+  - pytest =7.4.1
+  - pytest-cov =4.1.0
+  - pytest-qt =4.2.0
+  - pytest-harvest =1.10.4
+  - pre-commit =3.4.0
+  - ruff =0.0.287
+  - black =23.7.0
 
 condarc:
   channels:
